--- a/fwup.conf
+++ b/fwup.conf
@@ -1,4 +1,27 @@
-# Firmware configuration file for a Vultr Server Image
+
+# Firmware configuration file for x86_64
+
+#
+# Firmware metadata
+#
+
+# All of these can be overriden using environment variables of the same name.
+#
+#  Run 'fwup -m' to query values in a .fw file.
+#  Use 'fw_printenv' to query values on the target.
+#
+# These are used by Nerves libraries to introspect.
+define(NERVES_FW_PRODUCT, "Nerves Firmware")
+define(NERVES_FW_DESCRIPTION, "")
+define(NERVES_FW_VERSION, "${NERVES_SDK_VERSION}")
+define(NERVES_FW_PLATFORM, "kiosk")
+define(NERVES_FW_ARCHITECTURE, "x86_64")
+define(NERVES_FW_AUTHOR, "Le Tote")
+
+define(NERVES_FW_DEVPATH, "/dev/sda")
+define(NERVES_FW_APPLICATION_PART0_DEVPATH, "/dev/sda3") # Linux part number is 1-based
+define(NERVES_FW_APPLICATION_PART0_FSTYPE, "ext4")
+define(NERVES_FW_APPLICATION_PART0_TARGET, "/root")
 
 # Default paths if not specified via the commandline
 define(ROOTFS, "${NERVES_SYSTEM}/images/rootfs.squashfs")
@@ -9,26 +32,33 @@ define(ROOTFS, "${NERVES_SYSTEM}/images/rootfs.squashfs")
 # +----------------------------+
 # | MBR                        |
 # +----------------------------+
-# | Boot partition (FAT32)     |
+# | p0*: Boot A (FAT32)        |
 # | /boot/grub/grub.cfg        |
 # | /boot/grub/grubenv         |
 # +----------------------------+
-# | p2: Rootfs A (squashfs)   |
+# | p0*: Boot B (FAT32)        |
 # +----------------------------+
-# | p3: Rootfs B (squashfs)   |
+# | p1*: Rootfs A (squashfs)   |
 # +----------------------------+
-# | p4: Application (ext4)     |
+# | p1*: Rootfs B (squashfs)   |
 # +----------------------------+
+# | p2: Application (ext4)     |
+# +----------------------------+
+#
+# The p0/p1 partition points to whichever of configurations A or B that is
+# active.
+#
+define(UBOOT_ENV_OFFSET, 1024)
+define(UBOOT_ENV_COUNT, 16)  # 8 KB
 
-# The boot partition contains the bootloader configuration
-# and any server provisioning information. 16 MB should be
-# plenty for now.
-define(BOOT_PART_OFFSET, 2048)
-define(BOOT_PART_COUNT, 31232)
+define(BOOT_A_PART_OFFSET, 2048)
+define(BOOT_A_PART_COUNT, 51200)
+define-eval(BOOT_B_PART_OFFSET, "${BOOT_A_PART_OFFSET} + ${BOOT_A_PART_COUNT}")
+define(BOOT_B_PART_COUNT, ${BOOT_A_PART_COUNT})
 
-# Let the rootfs have room to grow up to 128 MiB
-define-eval(ROOTFS_A_PART_OFFSET, "${BOOT_PART_OFFSET} + ${BOOT_PART_COUNT}")
-define(ROOTFS_A_PART_COUNT, 262144)
+# Let the rootfs have room to grow up to 512 MiB
+define-eval(ROOTFS_A_PART_OFFSET, 65536)
+define(ROOTFS_A_PART_COUNT, 1048576)
 define-eval(ROOTFS_B_PART_OFFSET, "${ROOTFS_A_PART_OFFSET} + ${ROOTFS_A_PART_COUNT}")
 define(ROOTFS_B_PART_COUNT, ${ROOTFS_A_PART_COUNT})
 
@@ -37,13 +67,13 @@ define(ROOTFS_B_PART_COUNT, ${ROOTFS_A_PART_COUNT})
 define-eval(APP_PART_OFFSET, "${ROOTFS_B_PART_OFFSET} + ${ROOTFS_B_PART_COUNT}")
 define(APP_PART_COUNT, 20971520)
 
-# Firmware metadata
-meta-product = "Kiosk x86_64 Image"
-meta-description = ""
-meta-version = ${NERVES_SDK_VERSION}
-meta-platform = "kiosk"
-meta-architecture = "x86_64"
-meta-author = "Le Tote"
+# Firmware archive metadata
+meta-product = ${NERVES_FW_PRODUCT}
+meta-description = ${NERVES_FW_DESCRIPTION}
+meta-version = ${NERVES_FW_VERSION}
+meta-platform = ${NERVES_FW_PLATFORM}
+meta-architecture = ${NERVES_FW_ARCHITECTURE}
+meta-author = ${NERVES_FW_AUTHOR}
 
 # File resources are listed in the order that they are included in the .fw file
 # This is important, since this is the order that they're written on a firmware
@@ -71,11 +101,11 @@ file-resource grubenv_b {
     host-path = "${NERVES_SYSTEM}/images/grubenv_b"
 }
 
-mbr mbr {
+mbr mbr-a {
     bootstrap-code-host-path = "${NERVES_SYSTEM}/images/boot.img"
     partition 0 {
-        block-offset = ${BOOT_PART_OFFSET}
-        block-count = ${BOOT_PART_COUNT}
+        block-offset = ${BOOT_A_PART_OFFSET}
+        block-count = ${BOOT_A_PART_COUNT}
         type = 0xc # FAT32
         boot = true
     }
@@ -85,15 +115,40 @@ mbr mbr {
         type = 0x83 # Linux
     }
     partition 2 {
-        block-offset = ${ROOTFS_B_PART_OFFSET}
-        block-count = ${ROOTFS_B_PART_COUNT}
-        type = 0x83 # Linux
-    }
-    partition 3 {
         block-offset = ${APP_PART_OFFSET}
         block-count = ${APP_PART_COUNT}
         type = 0x83 # Linux
     }
+    # partition 3 is unused
+}
+
+mbr mbr-b {
+    bootstrap-code-host-path = "${NERVES_SYSTEM}/images/boot.img"
+    partition 0 {
+        block-offset = ${BOOT_B_PART_OFFSET}
+        block-count = ${BOOT_B_PART_COUNT}
+        type = 0xc # FAT32
+        boot = true
+    }
+    partition 1 {
+        block-offset = ${ROOTFS_B_PART_OFFSET}
+        block-count = ${ROOTFS_B_PART_COUNT}
+        type = 0x83 # Linux
+    }
+    partition 2 {
+        block-offset = ${APP_PART_OFFSET}
+        block-count = ${APP_PART_COUNT}
+        type = 0x83 # Linux
+    }
+    # partition 3 is unused
+}
+
+# Location where installed firmware information is stored.
+# While this is called "u-boot", u-boot isn't involved in this
+# setup. It just provides a convenient key/value store format.
+uboot-environment uboot-env {
+    block-offset = ${UBOOT_ENV_OFFSET}
+    block-count = ${UBOOT_ENV_COUNT}
 }
 
 # This firmware task writes everything to the destination media.
@@ -103,34 +158,64 @@ task complete {
     require-unmounted-destination = true
 
     on-init {
-        mbr_write(mbr)
-        fat_mkfs(${BOOT_PART_OFFSET}, ${BOOT_PART_COUNT})
-        fat_mkdir(${BOOT_PART_OFFSET}, "/boot")
-        fat_mkdir(${BOOT_PART_OFFSET}, "/boot/grub")
+        mbr_write(mbr-a)
+
+        uboot_clearenv(uboot-env)
+        uboot_setenv(uboot-env, "nerves_fw_active", "a")
+        uboot_setenv(uboot-env, "nerves_fw_devpath", ${NERVES_FW_DEVPATH})
+        uboot_setenv(uboot-env, "a.nerves_fw_application_part0_devpath", ${NERVES_FW_APPLICATION_PART0_DEVPATH})
+        uboot_setenv(uboot-env, "a.nerves_fw_application_part0_fstype", ${NERVES_FW_APPLICATION_PART0_FSTYPE})
+        uboot_setenv(uboot-env, "a.nerves_fw_application_part0_target", ${NERVES_FW_APPLICATION_PART0_TARGET})
+        uboot_setenv(uboot-env, "a.nerves_fw_product", ${NERVES_FW_PRODUCT})
+        uboot_setenv(uboot-env, "a.nerves_fw_description", ${NERVES_FW_DESCRIPTION})
+        uboot_setenv(uboot-env, "a.nerves_fw_version", ${NERVES_FW_VERSION})
+        uboot_setenv(uboot-env, "a.nerves_fw_platform", ${NERVES_FW_PLATFORM})
+        uboot_setenv(uboot-env, "a.nerves_fw_architecture", ${NERVES_FW_ARCHITECTURE})
+        uboot_setenv(uboot-env, "a.nerves_fw_author", ${NERVES_FW_AUTHOR})
+
+        fat_mkfs(${BOOT_A_PART_OFFSET}, ${BOOT_A_PART_COUNT})
+        fat_mkdir(${BOOT_A_PART_OFFSET}, "/boot")
+        fat_mkdir(${BOOT_A_PART_OFFSET}, "/boot/grub")
     }
 
     on-resource grub.img { raw_write(1) }
-    on-resource grub.cfg { fat_write(${BOOT_PART_OFFSET}, "/boot/grub/grub.cfg") }
-    on-resource grubenv_a_valid { fat_write(${BOOT_PART_OFFSET}, "/boot/grub/grubenv") }
+    on-resource grub.cfg { fat_write(${BOOT_A_PART_OFFSET}, "/boot/grub/grub.cfg") }
+    on-resource grubenv_a_valid { fat_write(${BOOT_A_PART_OFFSET}, "/boot/grub/grubenv") }
     on-resource rootfs.img {
         # write to the first rootfs partition
         raw_write(${ROOTFS_A_PART_OFFSET})
     }
 
     on-finish {
-        # Invalidate the app data partition and B partitions just
-        # in case something was on the SSD.
-        raw_memset(${APP_PART_OFFSET}, 8, 0xff)
-        raw_memset(${ROOTFS_B_PART_OFFSET}, 8, 0xff)
+      # Clear out any old data in the B partition that might be mistaken for
+      # a file system. This is mostly to avoid confusion in humans when
+      # reprogramming SDCards with unknown contents.
+      raw_memset(${BOOT_B_PART_OFFSET}, 256, 0xff)
+      raw_memset(${ROOTFS_B_PART_OFFSET}, 256, 0xff)
+
+      # Invalidate the application data partition so that it is guaranteed to
+      # trigger the corrupt filesystem detection code on first boot and get
+      # formatted. If this isn't done and an old SDCard is reused, the
+      # application data could be in a weird state.
+      raw_memset(${APP_PART_OFFSET}, 256, 0xff)
     }
 }
 
 task upgrade.a {
-    # This task upgrades the A partition, so make sure we're running
-    # on B.
-    require-path-on-device("/", "/dev/sda3")
+    # This task upgrades the A partition
+    require-partition-offset(1, ${ROOTFS_B_PART_OFFSET})
 
     on-init {
+      info("Upgrading the A partition")
+
+      # Clear some firmware information just in case this update gets
+      # interrupted midway.
+      uboot_unsetenv(uboot-env, "nerves_fw_a_version")
+      # Reset the previous contents of the A boot partition
+      fat_mkfs(${BOOT_A_PART_OFFSET}, ${BOOT_A_PART_COUNT})
+      fat_setlabel(${BOOT_A_PART_OFFSET}, "BOOT-A")
+      fat_mkdir(${BOOT_A_PART_OFFSET}, "/boot")
+      fat_mkdir(${BOOT_A_PART_OFFSET}, "/boot/grub")
     }
 
     on-resource rootfs.img {
@@ -139,19 +224,47 @@ task upgrade.a {
 
     # Key step to switching over the A partition
     on-resource grubenv_a {
-        fat_write(${BOOT_PART_OFFSET}, "/boot/grub/grubenv")
+        fat_write(${BOOT_A_PART_OFFSET}, "/boot/grub/grubenv")
     }
+    on-resource grub.cfg { fat_write(${BOOT_A_PART_OFFSET}, "/boot/grub/grub.cfg") }
 
     on-finish {
+      # Update firmware metadata
+      uboot_setenv(uboot-env, "a.nerves_fw_application_part0_devpath", ${NERVES_FW_APPLICATION_PART0_DEVPATH})
+      uboot_setenv(uboot-env, "a.nerves_fw_application_part0_fstype", ${NERVES_FW_APPLICATION_PART0_FSTYPE})
+      uboot_setenv(uboot-env, "a.nerves_fw_application_part0_target", ${NERVES_FW_APPLICATION_PART0_TARGET})
+      uboot_setenv(uboot-env, "a.nerves_fw_product", ${NERVES_FW_PRODUCT})
+      uboot_setenv(uboot-env, "a.nerves_fw_description", ${NERVES_FW_DESCRIPTION})
+      uboot_setenv(uboot-env, "a.nerves_fw_version", ${NERVES_FW_VERSION})
+      uboot_setenv(uboot-env, "a.nerves_fw_platform", ${NERVES_FW_PLATFORM})
+      uboot_setenv(uboot-env, "a.nerves_fw_architecture", ${NERVES_FW_ARCHITECTURE})
+      uboot_setenv(uboot-env, "a.nerves_fw_author", ${NERVES_FW_AUTHOR})
+
+      # Switch over to boot the new firmware
+      uboot_setenv(uboot-env, "nerves_fw_active", "a")
+      mbr_write(mbr-a)
+    }
+
+    on-error {
     }
 }
 
 task upgrade.b {
-    # This task upgrades the B partition, so make sure we're running
-    # on A.
-    require-path-on-device("/", "/dev/sda2")
+    # This task upgrades the B partition
+    require-partition-offset(1, ${ROOTFS_A_PART_OFFSET})
 
     on-init {
+      info("Upgrading the B partition")
+
+      # Clear some firmware information just in case this update gets
+      # interrupted midway.
+      uboot_unsetenv(uboot-env, "nerves_fw_b_version")
+
+      # Reset the previous contents of the B boot partition
+      fat_mkfs(${BOOT_B_PART_OFFSET}, ${BOOT_B_PART_COUNT})
+      fat_setlabel(${BOOT_B_PART_OFFSET}, "BOOT-B")
+      fat_mkdir(${BOOT_B_PART_OFFSET}, "/boot")
+      fat_mkdir(${BOOT_B_PART_OFFSET}, "/boot/grub")
     }
 
     on-resource rootfs.img {
@@ -160,15 +273,34 @@ task upgrade.b {
 
     # Key step to switching over the B partition
     on-resource grubenv_b {
-        fat_write(${BOOT_PART_OFFSET}, "/boot/grub/grubenv")
+        fat_write(${BOOT_B_PART_OFFSET}, "/boot/grub/grubenv")
     }
 
+    on-resource grub.cfg { fat_write(${BOOT_B_PART_OFFSET}, "/boot/grub/grub.cfg") }
+
     on-finish {
+      # Update firmware metadata
+      uboot_setenv(uboot-env, "b.nerves_fw_application_part0_devpath", ${NERVES_FW_APPLICATION_PART0_DEVPATH})
+      uboot_setenv(uboot-env, "b.nerves_fw_application_part0_fstype", ${NERVES_FW_APPLICATION_PART0_FSTYPE})
+      uboot_setenv(uboot-env, "b.nerves_fw_application_part0_target", ${NERVES_FW_APPLICATION_PART0_TARGET})
+      uboot_setenv(uboot-env, "b.nerves_fw_product", ${NERVES_FW_PRODUCT})
+      uboot_setenv(uboot-env, "b.nerves_fw_description", ${NERVES_FW_DESCRIPTION})
+      uboot_setenv(uboot-env, "b.nerves_fw_version", ${NERVES_FW_VERSION})
+      uboot_setenv(uboot-env, "b.nerves_fw_platform", ${NERVES_FW_PLATFORM})
+      uboot_setenv(uboot-env, "b.nerves_fw_architecture", ${NERVES_FW_ARCHITECTURE})
+      uboot_setenv(uboot-env, "b.nerves_fw_author", ${NERVES_FW_AUTHOR})
+
+      # Switch over to boot the new firmware
+      uboot_setenv(uboot-env, "nerves_fw_active", "b")
+      mbr_write(mbr-b)
+    }
+
+    on-error {
     }
 }
 
 task upgrade.wrong {
     on-init {
-        error("Please check that the rootfs is on /dev/sdaX")
+        error("Please check the media being upgraded. It doesn't look like either the A or B partitions are active.")
     }
 }
