--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -65,6 +65,7 @@ BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_8169=y
 BR2_PACKAGE_EVTEST=y
+BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_ERLANG_SMP=y
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
 BR2_PACKAGE_CA_CERTIFICATES=y
