--- a/rootfs-additions/etc/erlinit.config
+++ b/rootfs-additions/etc/erlinit.config
@@ -25,10 +25,10 @@
 #--run-on-exit /bin/sh
 
 # Enable UTF-8 filename handling in Erlang and custom inet configuration
--e LANG=en_US.UTF-8;LANGUAGE=en;ERL_INETRC=/etc/erl_inetrc
+-e LANG=en_US.UTF-8;LANGUAGE=en;ERL_INETRC=/etc/erl_inetrc;ERL_CRASH_DUMP=/root/crash.dump
 
 # Mount the application partition
--m /dev/sda4:/root:ext4::
+-m /dev/sda3:/root:ext4::
 
 # Erlang release search path
 -r /srv/erlang
