change rootfs size

--- a/fwup.conf
+++ b/fwup.conf
@@ -56,9 +56,9 @@ define(BOOT_A_PART_COUNT, 51200)
 define-eval(BOOT_B_PART_OFFSET, "${BOOT_A_PART_OFFSET} + ${BOOT_A_PART_COUNT}")
 define(BOOT_B_PART_COUNT, ${BOOT_A_PART_COUNT})
 
-# Let the rootfs have room to grow up to 512 MiB
+# Let the rootfs have room to grow up to 256 MiB
 define-eval(ROOTFS_A_PART_OFFSET, 65536)
-define(ROOTFS_A_PART_COUNT, 1048576)
+define(ROOTFS_A_PART_COUNT, 524288)
 define-eval(ROOTFS_B_PART_OFFSET, "${ROOTFS_A_PART_OFFSET} + ${ROOTFS_A_PART_COUNT}")
 define(ROOTFS_B_PART_COUNT, ${ROOTFS_A_PART_COUNT})
 
