--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -84,3 +84,5 @@ BR2_PACKAGE_ERLANG_HISTORY=y
 BR2_PACKAGE_NERVES_CONFIG=y
 BR2_PACKAGE_NERVES_CONFIG_NO_ERLINIT_CONF=y
 BR2_PACKAGE_NERVES_CONFIG_APPS="crypto"
+BR2_PACKAGE_KBD=y
+BR2_PACKAGE_LIBEVDEV=y
