--- a/fwup.conf
+++ b/fwup.conf
@@ -210,7 +210,7 @@ task upgrade.a {
 
       # Clear some firmware information just in case this update gets
       # interrupted midway.
-      uboot_unsetenv(uboot-env, "nerves_fw_a_version")
+      uboot_unsetenv(uboot-env, "a.nerves_fw_version")
       # Reset the previous contents of the A boot partition
       fat_mkfs(${BOOT_A_PART_OFFSET}, ${BOOT_A_PART_COUNT})
       fat_setlabel(${BOOT_A_PART_OFFSET}, "BOOT-A")
@@ -258,7 +258,7 @@ task upgrade.b {
 
       # Clear some firmware information just in case this update gets
       # interrupted midway.
-      uboot_unsetenv(uboot-env, "nerves_fw_b_version")
+      uboot_unsetenv(uboot-env, "b.nerves_fw_version")
 
       # Reset the previous contents of the B boot partition
       fat_mkfs(${BOOT_B_PART_OFFSET}, ${BOOT_B_PART_COUNT})
