--- a/fwup.conf
+++ b/fwup.conf
@@ -18,8 +18,8 @@ define(NERVES_FW_PLATFORM, "kiosk")
 define(NERVES_FW_ARCHITECTURE, "x86_64")
 define(NERVES_FW_AUTHOR, "Le Tote")
 
-define(NERVES_FW_DEVPATH, "/dev/sda")
-define(NERVES_FW_APPLICATION_PART0_DEVPATH, "/dev/sda4") # Linux part number is 1-based
+define(NERVES_FW_DEVPATH, "/dev/rootdisk0")
+define(NERVES_FW_APPLICATION_PART0_DEVPATH, "/dev/rootdisk4") # Linux part number is 1-based
 define(NERVES_FW_APPLICATION_PART0_FSTYPE, "ext4")
 define(NERVES_FW_APPLICATION_PART0_TARGET, "/root")
 
