remove elf package

--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -26,16 +26,17 @@ BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_NERVES_PATH}/board/nerves-common/busybox-1.22.config"
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
+BR2_PACKAGE_GSTREAMER1=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ALSA=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OGG=y
 BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VORBIS=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD=y
 BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUTODETECT=y
+BR2_PACKAGE_PULSEAUDIO=y
+BR2_PACKAGE_LZ4=y
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_FSCK is not set
 BR2_PACKAGE_DEJAVU=y
-BR2_PACKAGE_EFL=y
-BR2_PACKAGE_EFL_OPENGLES=y
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_DRI_DRIVER_I915=y
 BR2_PACKAGE_MESA3D_DRI_DRIVER_I965=y
@@ -72,13 +73,18 @@ BR2_PACKAGE_LINUX_FIRMWARE_RTL_81XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_8169=y
+BR2_PACKAGE_DBUS=y
 BR2_PACKAGE_EVTEST=y
 BR2_PACKAGE_KBD=y
+BR2_PACKAGE_LUAJIT=y
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
 BR2_PACKAGE_CA_CERTIFICATES=y
+BR2_PACKAGE_BULLET=y
 BR2_PACKAGE_LIBJPEG=y
+BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBMNL=y
 BR2_PACKAGE_LIBEVDEV=y
+BR2_PACKAGE_LIBFRIBIDI=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG=y
 BR2_PACKAGE_SUDO=y
