--- a/fwup.conf
+++ b/fwup.conf
@@ -193,7 +193,7 @@ task complete {
 task upgrade.a {
     # This task upgrades the A partition, so make sure we're running
     # on B.
-    require-path-on-device("/", "/dev/sda3")
+    require-uboot-variable(uboot-env, "nerves_fw_active", "b")
 
     # Verify the expected platform/architecture
     require-uboot-variable(uboot-env, "b.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
@@ -241,7 +241,7 @@ task upgrade.a {
 task upgrade.b {
     # This task upgrades the B partition, so make sure we're running
     # on A.
-    require-path-on-device("/", "/dev/sda2")
+    require-uboot-variable(uboot-env, "nerves_fw_active", "a")
 
     # Verify the expected platform/architecture
     require-uboot-variable(uboot-env, "a.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
@@ -289,7 +289,7 @@ task upgrade.wrong {
     require-uboot-variable(uboot-env, "a.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
     require-uboot-variable(uboot-env, "a.nerves_fw_architecture", "${NERVES_FW_ARCHITECTURE}")
     on-init {
-        error("Please check that the rootfs is on /dev/sdaX")
+        error("Please check that the nerves_fw_active metadata variable")
     }
 }
 
