--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -26,12 +26,6 @@ BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_NERVES_PATH}/board/nerves-common/busybox-1.22.config"
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
-BR2_PACKAGE_GSTREAMER1=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_ALSA=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_OGG=y
-BR2_PACKAGE_GST1_PLUGINS_BASE_PLUGIN_VORBIS=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD=y
-BR2_PACKAGE_GST1_PLUGINS_GOOD_PLUGIN_AUTODETECT=y
 BR2_PACKAGE_PULSEAUDIO=y
 BR2_PACKAGE_LZ4=y
 BR2_PACKAGE_E2FSPROGS=y
@@ -47,6 +41,7 @@ BR2_PACKAGE_QT5BASE_PNG=y
 BR2_PACKAGE_QT5MULTIMEDIA=y
 BR2_PACKAGE_QT5WEBENGINE=y
 BR2_PACKAGE_XORG7=y
+BR2_PACKAGE_XLIB_LIBXV=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_9170=y
 BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_9271=y
@@ -69,6 +64,7 @@ BR2_PACKAGE_EVTEST=y
 BR2_PACKAGE_KBD=y
 BR2_PACKAGE_LUAJIT=y
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
+BR2_PACKAGE_LIBVORBIS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_BULLET=y
 BR2_PACKAGE_LIBCURL=y
