--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -37,22 +37,13 @@ BR2_PACKAGE_LZ4=y
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_FSCK is not set
 BR2_PACKAGE_DEJAVU=y
-BR2_PACKAGE_MESA3D=y
-BR2_PACKAGE_MESA3D_DRI_DRIVER_I915=y
-BR2_PACKAGE_MESA3D_DRI_DRIVER_I965=y
-BR2_PACKAGE_MESA3D_OPENGL_EGL=y
-BR2_PACKAGE_MESA3D_OPENGL_ES=y
 BR2_PACKAGE_QT5=y
 BR2_PACKAGE_QT5BASE_SQLITE_SYSTEM=y
-BR2_PACKAGE_QT5BASE_OPENGL_ES2=y
-BR2_PACKAGE_QT5BASE_LINUXFB=y
-BR2_PACKAGE_QT5BASE_EGLFS=y
-BR2_PACKAGE_QT5BASE_DEFAULT_QPA="eglfs"
+BR2_PACKAGE_QT5BASE_DEFAULT_QPA="linuxfb"
 BR2_PACKAGE_QT5BASE_FONTCONFIG=y
 BR2_PACKAGE_QT5BASE_GIF=y
 BR2_PACKAGE_QT5BASE_JPEG=y
 BR2_PACKAGE_QT5BASE_PNG=y
-BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_QT_WEBKIT_KIOSK=y
 BR2_PACKAGE_QT_WEBKIT_KIOSK_SOUNDS=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
@@ -83,6 +74,7 @@ BR2_PACKAGE_BULLET=y
 BR2_PACKAGE_LIBJPEG=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBMNL=y
+BR2_PACKAGE_LIBEVDEV=y
 BR2_PACKAGE_LIBFRIBIDI=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG=y
