update to nerves v0.10

--- a/fwup.conf
+++ b/fwup.conf
@@ -1,5 +1,6 @@
-
 # Firmware configuration file for x86_64
+
+require-fwup-version="0.15.0"  # For the trim() call
 
 #
 # Firmware metadata
@@ -18,8 +19,10 @@ define(NERVES_FW_PLATFORM, "kiosk")
 define(NERVES_FW_ARCHITECTURE, "x86_64")
 define(NERVES_FW_AUTHOR, "Le Tote")
 
+# /dev/rootdisk* paths are provided by erlinit to refer to the disk and partitions
+# on whatever drive provides the rootfs.
 define(NERVES_FW_DEVPATH, "/dev/rootdisk0")
-define(NERVES_FW_APPLICATION_PART0_DEVPATH, "/dev/rootdisk4") # Linux part number is 1-based
+define(NERVES_FW_APPLICATION_PART0_DEVPATH, "/dev/rootdisk0p4") # Linux part number is 1-based
 define(NERVES_FW_APPLICATION_PART0_FSTYPE, "ext4")
 define(NERVES_FW_APPLICATION_PART0_TARGET, "/root")
 
@@ -92,6 +95,9 @@ file-resource grub.cfg {
 # is in case the user aborts the programming midway.
 file-resource rootfs.img {
     host-path = ${ROOTFS}
+
+    # Error out if the rootfs size exceeds the partition size
+    assert-size-lte = ${ROOTFS_A_PART_COUNT}
 }
 file-resource grubenv_a_valid {
     host-path = "${NERVES_SYSTEM}/images/grubenv_a_valid"
@@ -184,8 +190,7 @@ task complete {
 
       # Invalidate the application data partition so that it is guaranteed to
       # trigger the corrupt filesystem detection code on first boot and get
-      # formatted. If this isn't done and an old SDCard is reused, the
-      # application data could be in a weird state.
+      # formatted.
       raw_memset(${APP_PART_OFFSET}, 256, 0xff)
     }
 }
@@ -203,8 +208,11 @@ task upgrade.a {
         info("Upgrading partition A")
 
       # Clear some firmware information just in case this update gets
-      # interrupted midway.
+        # interrupted midway. If this partition was bootable, it's not going to
+        # be soon.
         uboot_unsetenv(uboot-env, "a.nerves_fw_version")
+        uboot_unsetenv(uboot-env, "a.nerves_fw_platform")
+        uboot_unsetenv(uboot-env, "a.nerves_fw_architecture")
 
         # Indicate that the entire partition can be cleared
         trim(${ROOTFS_A_PART_OFFSET}, ${ROOTFS_A_PART_COUNT})
@@ -253,6 +261,8 @@ task upgrade.b {
       # Clear some firmware information just in case this update gets
       # interrupted midway.
       uboot_unsetenv(uboot-env, "b.nerves_fw_version")
+      uboot_unsetenv(uboot-env, "b.nerves_fw_platform")
+      uboot_unsetenv(uboot-env, "b.nerves_fw_architecture")
 
       trim(${ROOTFS_B_PART_OFFSET}, ${ROOTFS_B_PART_COUNT})
     }
