--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 defaults: &defaults
   working_directory: /nerves/build
   docker:
-    - image: nervesproject/nerves:0.13.5
+    - image: nervesproject/nerves:0.17.0
   environment:
     ENV: CI
     MIX_ENV: test
-    ELIXIR_VERSION: 1.5.1
+    ELIXIR_VERSION: 1.5.2
 
 install_elixir: &install_elixir
   run:
@@ -19,20 +19,23 @@ install_hex_rebar: &install_hex_rebar
   run:
     name: Install hex and rebar
     command: |
+      cd /tmp
       mix local.hex --force
       mix local.rebar --force
 
 install_nerves_bootstrap: &install_nerves_bootstrap
   run:
     name: Install nerves_bootstrap
-    command: mix archive.install https://github.com/nerves-project/archives/raw/master/nerves_bootstrap.ez --force
+    command: |
+      cd /tmp
+      mix archive.install github nerves-project/nerves_bootstrap --force
 
 version: 2.0
 
 jobs:
   build_system:
     <<: *defaults
-    resource_class: large
+    resource_class: xlarge
     steps:
       - checkout
       - <<: *install_elixir
@@ -42,14 +45,17 @@ jobs:
           name: Install dependencies
           command: mix deps.get
       - restore_cache:
-          key: nerves/cache
+          key: nerves/cache-{{ .Environment.CIRCLE_PROJECT_USERNAME}}-{{ .Environment.CIRCLE_PROJECT_REPONAME}}
       - run:
           name: Build
           command: mix compile
+      - run:
+          name: Lint
+          command: mix nerves.system.lint nerves_defconfig
       - save_cache:
-          key: nerves/cache
+          key: nerves/dl-{{ .Environment.CIRCLE_PROJECT_USERNAME}}-{{ .Environment.CIRCLE_PROJECT_REPONAME}}
           paths:
-            - "/nerves/cache"
+            - "/nerves/dl"
       - run:
           name: "Create artifact dir"
           command: mkdir -p /nerves/deploy/system/artifacts
@@ -60,15 +66,13 @@ jobs:
       - run:
           name: "Create artifacts"
           command: |
-            cd /nerves/build/.nerves/artifacts/*
-            make system
             if [ -n "$CIRCLE_TAG" ]; then
               TAG=$CIRCLE_TAG
             else
               TAG=$CIRCLE_SHA1
             fi
-            cp ${CIRCLE_PROJECT_REPONAME}.tar.gz /nerves/deploy/system/artifacts/${CIRCLE_PROJECT_REPONAME}-${TAG}.tar.gz
-            cp images/${CIRCLE_PROJECT_REPONAME}.fw /nerves/deploy/system/artifacts/${CIRCLE_PROJECT_REPONAME}-${TAG}.fw
+            mix nerves.artifact ${CIRCLE_PROJECT_REPONAME} --path /nerves/deploy/system/artifacts
+            cp .nerves/artifacts/*/images/${CIRCLE_PROJECT_REPONAME}.fw /nerves/deploy/system/artifacts/${CIRCLE_PROJECT_REPONAME}-${TAG}.fw
       - store_artifacts:
           path: /nerves/deploy/system/artifacts
           destination: system
@@ -93,6 +97,9 @@ jobs:
       - <<: *install_hex_rebar
       - <<: *install_nerves_bootstrap
       - run:
+          name: Create Nerves paths
+          command: mkdir -p ~/.nerves/artifacts
+      - run:
           name: Install test dependencies
           command: mix deps.get
       - run:
@@ -112,7 +119,9 @@ jobs:
             --branch $CIRCLE_BRANCH
             --tag $CIRCLE_TAG
             --pr $CIRCLE_PULL_REQUEST
-            --build-url $CIRCLE_BUILD_URL
+            --ci circleci
+            --ci-build-url $CIRCLE_BUILD_URL
+            --ci-build-num $CIRCLE_BUILD_NUM
       - run:
           name: "Sign test fw artifact"
           command: fwup --sign --private-key $NERVES_FW_PRIV_KEY -i /nerves/build/test/_build/test/nerves/images/test.fw -o /nerves/deploy/test/artifacts/${CIRCLE_SHA1}.fw
@@ -136,7 +145,7 @@ jobs:
           key: nerves/deploy/test-{{ .Revision }}-{{ .Environment.CIRCLE_TAG }}
       - deploy:
           name: Publish notification on SNS
-          command: aws sns publish --topic-arn arn:aws:sns:us-east-1:991424406598:nerves-test-firmware --message "$(cat /nerves/deploy/test/artifacts/${CIRCLE_SHA1}.json)"
+          command: aws sns publish --topic-arn $AWS_SNS_TOPIC_ARN --message "$(cat /nerves/deploy/test/artifacts/${CIRCLE_SHA1}.json)"
 
   deploy_system:
     <<: *defaults
