include opengl egl backend

--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -1,7 +1,6 @@
 BR2_x86_64=y
 BR2_GLOBAL_PATCH_DIR="${BR2_EXTERNAL_NERVES_PATH}/patches ${NERVES_DEFCONFIG_DIR}/patches"
 BR2_TOOLCHAIN_EXTERNAL=y
-BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
 BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD=y
 BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/nerves-project/toolchains/releases/download/v0.13.1/nerves_toolchain_x86_64_unknown_linux_gnu-linux_x86_64-0.13.1-84C2F9843BFD6792AAD3F14436F084A1D0953AF88525684D326A1FC20C5E0B20.tar.xz"
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="$(ARCH)-unknown-linux-gnu"
@@ -28,15 +27,18 @@ BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_NERVES_PATH}/board/nerves-common/busybox-1.22.config"
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
+BR2_PACKAGE_MJPEGTOOLS=y
 BR2_PACKAGE_PULSEAUDIO=y
 BR2_PACKAGE_LZ4=y
-BR2_PACKAGE_MJPEGTOOLS=y
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_FSCK is not set
 BR2_PACKAGE_DEJAVU=y
+BR2_PACKAGE_MESA3D=y
+BR2_PACKAGE_MESA3D_DRI_DRIVER_I915=y
+BR2_PACKAGE_MESA3D_OSMESA=y
+BR2_PACKAGE_MESA3D_OPENGL_EGL=y
 BR2_PACKAGE_QT5=y
 BR2_PACKAGE_QT5BASE_SQLITE_SYSTEM=y
-BR2_PACKAGE_QT5BASE_OPENGL_ES2=y
 BR2_PACKAGE_QT5BASE_LINUXFB=y
 BR2_PACKAGE_QT5BASE_DEFAULT_QPA="eglfs"
 BR2_PACKAGE_QT5BASE_GIF=y
@@ -74,7 +76,6 @@ BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBMNL=y
 BR2_PACKAGE_LIBEVDEV=y
 BR2_PACKAGE_LIBFRIBIDI=y
-BR2_PACKAGE_LIBEVDEV=y
 BR2_PACKAGE_CUPS=y
 BR2_PACKAGE_SOCAT=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
