update example code

--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -35,8 +35,10 @@ BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_DEJAVU=y
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_DRI_DRIVER_I915=y
+BR2_PACKAGE_MESA3D_DRI_DRIVER_I965=y
 BR2_PACKAGE_MESA3D_OSMESA=y
 BR2_PACKAGE_MESA3D_OPENGL_EGL=y
+BR2_PACKAGE_MESA3D_OPENGL_ES=y
 BR2_PACKAGE_QT5=y
 BR2_PACKAGE_QT5BASE_SQLITE_SYSTEM=y
 BR2_PACKAGE_QT5BASE_LINUXFB=y
