--- a/rootfs_overlay/etc/erlinit.config
+++ b/rootfs_overlay/etc/erlinit.config
@@ -5,11 +5,12 @@
 
 # Specify where erlinit should send the IEx prompt. Only one may be enabled at
 # a time.
--c tty1   # Output console
+#-c tty1   # Output console
+-c ttyS0
 
 # If more than one tty are available, always warn if the user is looking at the
 # wrong one.
---warn-unused-tty
+#--warn-unused-tty
 
 # Use dtach to capture the iex session so that it can be redirected to the
 # app's GUI
