update deps and project for nerves 1.0

--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -2,7 +2,7 @@ BR2_x86_64=y
 BR2_GLOBAL_PATCH_DIR="${BR2_EXTERNAL_NERVES_PATH}/patches ${NERVES_DEFCONFIG_DIR}/patches/buildroot"
 BR2_TOOLCHAIN_EXTERNAL=y
 BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD=y
-BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/nerves-project/toolchains/releases/download/v1.0.0-rc.0/nerves_toolchain_x86_64_unknown_linux_gnu-linux_x86_64-1.0.0-rc.0-7328AFD.tar.xz"
+BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/nerves-project/toolchains/releases/download/v1.0.0/nerves_toolchain_x86_64_unknown_linux_gnu-linux_x86_64-1.0.0-77CA02D.tar.xz"
 BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="$(ARCH)-unknown-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_GCC_6=y
 BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_10=y
@@ -35,7 +35,7 @@ BR2_PACKAGE_LZ4=y
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_FSCK is not set
 BR2_PACKAGE_DEJAVU=y
-BR2_PACKAGE_CUSTOMLOGO_PATH="$(NERVES_DEFCONFIG_DIR)/logo_custom_clut224.ppm"
+BR2_PACKAGE_CUSTOMLOGO_PATH="${NERVES_DEFCONFIG_DIR}/logo_custom_clut224.ppm"
 BR2_PACKAGE_MESA3D=y
 BR2_PACKAGE_MESA3D_GALLIUM_DRIVER_VIRGL=y
 BR2_PACKAGE_MESA3D_DRI_DRIVER_I915=y
