--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 defaults: &defaults
   working_directory: /nerves/build
   docker:
-    - image: nervesproject/nerves:1.0.0-rc.0
+    - image: nervesproject/nerves:1.0.0
   environment:
     ENV: CI
     MIX_ENV: test
-    ELIXIR_VERSION: 1.6.1
+    ELIXIR_VERSION: 1.6.4
 
 install_elixir: &install_elixir
   run:
@@ -26,7 +26,7 @@ install_nerves_bootstrap: &install_nerves_bootstrap
   run:
     name: Install nerves_bootstrap
     command: |
-      mix archive.install github nerves-project/nerves_bootstrap --force
+      mix archive.install hex nerves_bootstrap "~> 1.0" --force
 
 version: 2.0
 
@@ -70,7 +70,6 @@ jobs:
               TAG=$CIRCLE_SHA1
             fi
             mix nerves.artifact ${CIRCLE_PROJECT_REPONAME} --path /nerves/deploy/system/artifacts
-            cp .nerves/artifacts/*/images/${CIRCLE_PROJECT_REPONAME}.fw /nerves/deploy/system/artifacts/${CIRCLE_PROJECT_REPONAME}-${TAG}.fw
       - store_artifacts:
           path: /nerves/deploy/system/artifacts
           destination: system
