--- a/fwup.conf
+++ b/fwup.conf
@@ -25,6 +25,7 @@ define(NERVES_FW_DEVPATH, "/dev/rootdisk0")
 define(NERVES_FW_APPLICATION_PART0_DEVPATH, "/dev/rootdisk0p4") # Linux part number is 1-based
 define(NERVES_FW_APPLICATION_PART0_FSTYPE, "ext4")
 define(NERVES_FW_APPLICATION_PART0_TARGET, "/root")
+define(NERVES_PROVISIONING, "${NERVES_SYSTEM}/images/fwup_include/provisioning.conf")
 
 # Default paths if not specified via the commandline
 define(ROOTFS, "${NERVES_SYSTEM}/images/rootfs.squashfs")
@@ -153,7 +154,14 @@ task complete {
     on-init {
         mbr_write(mbr)
 
+        fat_mkfs(${BOOT_PART_OFFSET}, ${BOOT_PART_COUNT})
+        fat_mkdir(${BOOT_PART_OFFSET}, "/boot")
+        fat_mkdir(${BOOT_PART_OFFSET}, "/boot/grub")
+
         uboot_clearenv(uboot-env)
+
+        include("${NERVES_PROVISIONING}")
+
         uboot_setenv(uboot-env, "nerves_fw_active", "a")
         uboot_setenv(uboot-env, "nerves_fw_devpath", ${NERVES_FW_DEVPATH})
         uboot_setenv(uboot-env, "a.nerves_fw_application_part0_devpath", ${NERVES_FW_APPLICATION_PART0_DEVPATH})
@@ -167,10 +175,7 @@ task complete {
         uboot_setenv(uboot-env, "a.nerves_fw_author", ${NERVES_FW_AUTHOR})
         uboot_setenv(uboot-env, "a.nerves_fw_vcs_identifier", ${NERVES_FW_VCS_IDENTIFIER})
         uboot_setenv(uboot-env, "a.nerves_fw_misc", ${NERVES_FW_MISC})
-
-        fat_mkfs(${BOOT_PART_OFFSET}, ${BOOT_PART_COUNT})
-        fat_mkdir(${BOOT_PART_OFFSET}, "/boot")
-        fat_mkdir(${BOOT_PART_OFFSET}, "/boot/grub")
+        uboot_setenv(uboot-env, "a.nerves_fw_uuid", "\${FWUP_META_UUID}")
     }
 
     on-resource grub.img { raw_write(1) }
@@ -213,6 +218,7 @@ task upgrade.a {
         uboot_unsetenv(uboot-env, "a.nerves_fw_version")
         uboot_unsetenv(uboot-env, "a.nerves_fw_platform")
         uboot_unsetenv(uboot-env, "a.nerves_fw_architecture")
+        uboot_unsetenv(uboot-env, "a.nerves_fw_uuid")
 
         # Indicate that the entire partition can be cleared
         trim(${ROOTFS_A_PART_OFFSET}, ${ROOTFS_A_PART_COUNT})
@@ -236,6 +242,7 @@ task upgrade.a {
       uboot_setenv(uboot-env, "a.nerves_fw_author", ${NERVES_FW_AUTHOR})
       uboot_setenv(uboot-env, "a.nerves_fw_vcs_identifier", ${NERVES_FW_VCS_IDENTIFIER})
       uboot_setenv(uboot-env, "a.nerves_fw_misc", ${NERVES_FW_MISC})
+      uboot_setenv(uboot-env, "a.nerves_fw_uuid", "\${FWUP_META_UUID}")
 
       # Switch over to boot the new firmware
       uboot_setenv(uboot-env, "nerves_fw_active", "a")
@@ -263,6 +270,7 @@ task upgrade.b {
       uboot_unsetenv(uboot-env, "b.nerves_fw_version")
       uboot_unsetenv(uboot-env, "b.nerves_fw_platform")
       uboot_unsetenv(uboot-env, "b.nerves_fw_architecture")
+      uboot_unsetenv(uboot-env, "b.nerves_fw_uuid")
 
       trim(${ROOTFS_B_PART_OFFSET}, ${ROOTFS_B_PART_COUNT})
     }
@@ -285,6 +293,7 @@ task upgrade.b {
       uboot_setenv(uboot-env, "b.nerves_fw_author", ${NERVES_FW_AUTHOR})
       uboot_setenv(uboot-env, "b.nerves_fw_vcs_identifier", ${NERVES_FW_VCS_IDENTIFIER})
       uboot_setenv(uboot-env, "b.nerves_fw_misc", ${NERVES_FW_MISC})
+      uboot_setenv(uboot-env, "b.nerves_fw_uuid", "\${FWUP_META_UUID}")
 
       # Switch over to boot the new firmware
       uboot_setenv(uboot-env, "nerves_fw_active", "b")
