Reenable the cconsole on the main display

--- a/grub.cfg
+++ b/grub.cfg
@@ -13,10 +13,10 @@ load_env
 # Boot A or B depending on which one is active
 if [ $boot = 1 ]; then
      echo "Booting partition B..."
-     linux (hd0,msdos3)/boot/bzImage vt.global_cursor_default=0 net.ifnames=0 root=PARTUUID=04030202-03 rootwait
+     linux (hd0,msdos3)/boot/bzImage net.ifnames=0 root=PARTUUID=04030202-03 rootwait
 else
      echo "Booting partition A..."
-     linux (hd0,msdos2)/boot/bzImage vt.global_cursor_default=0 net.ifnames=0 root=PARTUUID=04030202-02 rootwait
+     linux (hd0,msdos2)/boot/bzImage net.ifnames=0 root=PARTUUID=04030202-02 rootwait
 fi
 
 # Boot!!!   
