--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -92,5 +92,7 @@ BR2_TARGET_GRUB2=y
 BR2_TARGET_GRUB2_BUILTIN_MODULES="boot linux ext2 squash4 fat part_msdos normal biosdisk loadenv echo true test sleep"
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_NERVES_SYSTEM_NAME="kiosk_system_x86_64"
+BR2_NERVES_ADDITIONAL_IMAGE_FILES="${NERVES_DEFCONFIG_DIR}/fwup.conf"
+BR2_PACKAGE_NBTTY=y
 BR2_PACKAGE_NERVES_CONFIG=y
 BR2_PACKAGE_NOTO_EMOJI=y
