--- a/rootfs_overlay/etc/erlinit.config
+++ b/rootfs_overlay/etc/erlinit.config
@@ -5,8 +5,8 @@
 
 # Specify where erlinit should send the IEx prompt. Only one may be enabled at
 # a time.
-#-c tty1   # Output console
--c ttyS0
+-c tty1   # Output console
+#-c ttyS0
 
 # If more than one tty are available, always warn if the user is looking at the
 # wrong one.
