--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 defaults: &defaults
   working_directory: /nerves/build
   docker:
-    - image: nervesproject/nerves:1.3.0
+    - image: nervesproject/nerves_system_br:1.5.2
   environment:
     ENV: CI
     MIX_ENV: test
-    ELIXIR_VERSION: 1.6.6
+    ELIXIR_VERSION: 1.7.3
 
 install_elixir: &install_elixir
   run:
