Fix confusing message in fwup.conf

--- a/fwup.conf
+++ b/fwup.conf
@@ -308,7 +308,7 @@ task upgrade.wrong {
     require-uboot-variable(uboot-env, "a.nerves_fw_platform", "${NERVES_FW_PLATFORM}")
     require-uboot-variable(uboot-env, "a.nerves_fw_architecture", "${NERVES_FW_ARCHITECTURE}")
     on-init {
-        error("Please check that the nerves_fw_active metadata variable")
+        error("Please check the media being upgraded. It doesn't look like either the A or B partitions are active.")
     }
 }
 
