--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -73,12 +73,15 @@ BR2_PACKAGE_LINUX_FIRMWARE_RTL_81XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_8169=y
+BR2_PACKAGE_ACPICA=y
+BR2_PACKAGE_ACPID=y
 BR2_PACKAGE_EVTEST=y
 BR2_PACKAGE_KBD=y
 BR2_PACKAGE_LUAJIT=y
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
 BR2_PACKAGE_LIBVORBIS=y
 BR2_PACKAGE_CA_CERTIFICATES=y
+BR2_PACKAGE_LIBP11=y
 BR2_PACKAGE_BULLET=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBMNL=y
@@ -95,7 +98,6 @@ BR2_TARGET_GRUB2_BUILTIN_MODULES="boot linux ext2 squash4 fat part_msdos normal 
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_NERVES_SYSTEM_NAME="kiosk_system_x86_64"
 BR2_NERVES_ADDITIONAL_IMAGE_FILES="${NERVES_DEFCONFIG_DIR}/fwup.conf"
-BR2_PACKAGE_LIBP11=y
 BR2_PACKAGE_NBTTY=y
 BR2_PACKAGE_NERVES_CONFIG=y
 BR2_PACKAGE_NOTO_EMOJI=y
