--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 exec: &exec
   name: build-tools/nerves-system-br
-  version: 1.8.4
-  elixir: 1.9.0-otp-22
+  version: 1.8.5
+  elixir: 1.9.1-otp-22
 
 version: 2.1
 
 
 orbs:
-  build-tools: nerves-project/build-tools@dev:jschneck
+  build-tools: nerves-project/build-tools@0.1.2
 
 workflows:
   version: 2
