Disable pulse audio

--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -33,8 +33,8 @@ BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_NERVES_PATH}/board/nerves-common/busy
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
 BR2_PACKAGE_MJPEGTOOLS=y
-BR2_PACKAGE_PULSEAUDIO=y
 BR2_PACKAGE_LZ4=y
+BR2_PACKAGE_LIBTOOL=y
 BR2_PACKAGE_E2FSPROGS=y
 # BR2_PACKAGE_E2FSPROGS_FSCK is not set
 BR2_PACKAGE_DEJAVU=y
@@ -79,7 +79,9 @@ BR2_PACKAGE_EVTEST=y
 BR2_PACKAGE_KBD=y
 BR2_PACKAGE_LUAJIT=y
 # BR2_PACKAGE_ALSA_LIB_ALISP is not set
+BR2_PACKAGE_LIBSNDFILE=y
 BR2_PACKAGE_LIBVORBIS=y
+BR2_PACKAGE_SPEEX=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBP11=y
 BR2_PACKAGE_BULLET=y
